--- a/src/App.scss
+++ b/src/App.scss
@@ -1026,6 +1026,7 @@ header {
 .testimonial {
     background-color: #F0D082;
 
+
     .container-fluid {
         background-color: #ffffff;
 
@@ -1040,12 +1041,12 @@ header {
 
         .testimonial-box {
             display: flex;
-            justify-content: space-between;
             flex-wrap: wrap;
             text-align: center;
 
 
             @media(min-width: 992px) {
+                justify-content: space-between;
                 margin: 0px 100px 0px 100px;
                 text-align: left;
             }
@@ -1063,6 +1064,11 @@ header {
                 .rowed {
                     display: flex;
                     flex-direction: row;
+                    margin-left: 30px;
+                    @media(min-width: 992px) {
+
+                        margin-left:0px;
+                    }
                 }
 
                 .client-information {
