--- a/src/components/OurServicesSection/OurServicesSection.scss
+++ b/src/components/OurServicesSection/OurServicesSection.scss
@@ -1,3 +1,8 @@
+.btn-transparent{
+    margin-top: 50px;
+    margin-bottom: 120px;
+}
+
 .our-services {
     background-color: #F0EFE9;
     position: relative;
@@ -108,12 +113,6 @@
                 }
             }
         }
-
-        .browse-button {
-            margin-top: 50px;
-            margin-bottom: 120px;
-        }
-
         .btn-transparent {
             background-color: transparent;
             border: 1px solid #191919;
