--- a/src/components/FeatureSection/FeatureSection.scss
+++ b/src/components/FeatureSection/FeatureSection.scss
@@ -39,8 +39,8 @@
             }
 
             .section-title {
-                .btn-learn-more {
-                    padding: 25px 100px 25px 100px;
+                .btn-yellow {
+                    padding: 20px 100px 20px 100px;
                     font-family: Inter, sans-serif;
                     font-weight: 600;
                     font-size: 24px;
