--- a/src/components/MeetOurTeamSection/MeetOurTeamSection.scss
+++ b/src/components/MeetOurTeamSection/MeetOurTeamSection.scss
@@ -74,6 +74,10 @@
                 font-weight: 400;
                 font-size: 16px;
             }
+            .text-decoration{
+                text-decoration: none;
+                color: #191919;
+            }
 
         }
 
