--- a/src/components/ContactInfoBoxesSection/ContactInfoBoxesSection.css
+++ b/src/components/ContactInfoBoxesSection/ContactInfoBoxesSection.css
@@ -1,16 +1,16 @@
 @media (min-width: 992px) {
-  .container {
+  .contact-info-boxes-section .container {
     padding-left: 0px;
     padding-right: 0px;
   }
 }
-.container .contact-boxes {
+.contact-info-boxes-section .container .contact-boxes {
   text-align: center;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 @media (min-width: 992px) {
-  .container .contact-boxes {
+  .contact-info-boxes-section .container .contact-boxes {
     text-align: start;
     display: flex;
     justify-content: space-between;
@@ -18,19 +18,19 @@
     margin-bottom: 80px;
   }
 }
-.container .contact-boxes .content-box {
+.contact-info-boxes-section .container .contact-boxes .content-box {
   margin-bottom: 10px;
 }
 @media (min-width: 992px) {
-  .container .contact-boxes .content-box {
+  .contact-info-boxes-section .container .contact-boxes .content-box {
     display: none;
   }
 }
-.container .contact-boxes .contact-box {
+.contact-info-boxes-section .container .contact-boxes .contact-box {
   display: none;
 }
 @media (min-width: 992px) {
-  .container .contact-boxes .contact-box {
+  .contact-info-boxes-section .container .contact-boxes .contact-box {
     border: 1px solid rgba(25, 25, 25, 0.2);
     padding-top: 50px;
     padding-bottom: 50px;
@@ -42,12 +42,12 @@
   }
 }
 @media (min-width: 992px) and (min-width: 1320px) {
-  .container .contact-boxes .contact-box {
+  .contact-info-boxes-section .container .contact-boxes .contact-box {
     width: 420px;
   }
 }
 @media (min-width: 992px) {
-  .container .contact-boxes .contact-box .icons .border-round-icon {
+  .contact-info-boxes-section .container .contact-boxes .contact-box .icons .border-round-icon {
     color: #ffffff;
     background-color: #191919;
     border: 1px solid #191919;
@@ -55,10 +55,10 @@
     text-align: center;
     padding: 15px;
   }
-  .container .contact-boxes .contact-box .texts h4 {
+  .contact-info-boxes-section .container .contact-boxes .contact-box .texts h4 {
     margin-bottom: 15px;
   }
-  .container .contact-boxes .contact-box .texts p {
+  .contact-info-boxes-section .container .contact-boxes .contact-box .texts p {
     font-family: "Inter", sans-serif;
     font-size: 18px;
     font-weight: 400;
