--- a/src/components/ArticleAndNewsSection/ArticleAndNewsSection.scss
+++ b/src/components/ArticleAndNewsSection/ArticleAndNewsSection.scss
@@ -95,7 +95,7 @@
         display: flex;
         justify-content: center;
         margin-top: 30px;
-        margin-bottom: 90px;
+        padding-bottom: 90px;
         gap: 15px;
         font-size: 14px;
 
