--- a/src/components/NewsDetailsSection/NewsDetailsSection.css
+++ b/src/components/NewsDetailsSection/NewsDetailsSection.css
@@ -20,11 +20,19 @@
   margin-top: 80px;
   margin-bottom: 80px;
 }
-.container img {
-  margin-top: 70px;
+.container .grid-layout img {
+  margin-top: 50px;
   margin-bottom: 40px;
   max-width: 760px;
   max-height: 500px;
+}
+.container .grid-layout h1 {
+  margin-top: 140px;
+  margin-bottom: 25px;
+  font-weight: 700;
+}
+.container .grid-layout p {
+  font-size: 20px;
 }
 .container .category-buttons {
   margin-top: 70px;
@@ -38,4 +46,63 @@
   padding: 5px 25px;
   background-color: rgba(19, 19, 19, 0.05);
   border-radius: 25px;
+}
+.container .right-section {
+  display: flex;
+  flex-direction: column;
+}
+.container .right-section .search-bar {
+  margin-top: 80px;
+}
+@media (min-width: 920px) {
+  .container .right-section .search-bar {
+    margin-top: 350px;
+  }
+}
+.container .right-section .search-bar input {
+  color: #191919;
+  text-decoration: none;
+  padding: 15px 30px;
+  font-size: 16px;
+  border-radius: 25px;
+  outline: none;
+  border: 1px solid rgba(25, 25, 25, 0.1);
+  background-color: #F3F3F3;
+}
+.container .right-section .right-boxes {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 50px;
+  padding-bottom: 40px;
+  margin-top: 40px;
+  border: 1px solid #D3E6FB;
+}
+.container .right-section .right-boxes p {
+  font-size: 16px;
+  font-weight: 700;
+}
+.container .right-section .right-boxes a {
+  text-decoration: none;
+  color: black;
+}
+.container .right-section .right-boxes h3 {
+  margin-bottom: 30px;
+}
+.container .right-section .right-boxes .underlined-text {
+  position: relative;
+}
+.container .right-section .right-boxes .underlined-text::before {
+  content: "";
+  display: block;
+  border-bottom: 2px solid #000;
+  width: 55px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.container .right-section .right-boxes .underlines p {
+  border-bottom: 1px solid #D3E6FB;
+}
+.container .right-section .right-boxes .posts-color {
+  color: gray;
 }
