--- a/src/components/NewsDetailsSection/NewsDetailsSection.scss
+++ b/src/components/NewsDetailsSection/NewsDetailsSection.scss
@@ -22,13 +22,22 @@
             margin-top: 80px;
             margin-bottom: 80px;
         }
+        img{
+            margin-top: 50px;
+            margin-bottom: 40px;
+            max-width: 760px;
+            max-height: 500px;;
+        }
+        h1{
+            margin-top: 140px;
+            margin-bottom: 25px;
+            font-weight: 700;
+        }
+        p{
+            font-size: 20px;
+        }
     }
-    img{
-        margin-top: 70px;
-        margin-bottom: 40px;
-        max-width: 760px;
-        max-height: 500px;;
-    }
+
 
     .category-buttons{
         margin-top: 70px;
@@ -44,6 +53,65 @@
             border-radius: 25px;
         }
     }
+    .right-section{
+        display: flex;
+        flex-direction: column;
+        .search-bar{
+            margin-top: 80px;
+            @media (min-width: 920px){
+                margin-top: 350px;
+            }
+            input {
+                color: #191919;
+                text-decoration: none;
+                padding: 15px 30px;
+                font-size: 16px;
+                border-radius: 25px;
+                outline: none;
+                border: 1px solid rgba(25, 25, 25, 0.10);
+                background-color: #F3F3F3;
+            }
 
+        }
+        .right-boxes{
+            padding-left: 30px;
+            padding-right: 30px;
+            padding-top: 50px;
+            padding-bottom: 40px;
+            margin-top: 40px;
+            border: 1px solid #D3E6FB;
+            p{
+                font-size: 16px;
+                font-weight: 700;
+            }
+            a{
+                text-decoration: none;
+                color: black;
+            }
+            h3{
+                margin-bottom: 30px;
+            }
+            .underlined-text {
+                position: relative;
+                &::before {
+                content: "";
+                display: block;
+                border-bottom: 2px solid #000;
+                width: 55px;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                }
+            }
+        .underlines{
+            p{
+                border-bottom: 1px solid #D3E6FB;
+            }
+        }
 
+        .posts-color{
+            color: gray;
+        }
+        }
+    }
 }
