--- a/src/components/NewsDetailsSection/NewsDetailsSection.css
+++ b/src/components/NewsDetailsSection/NewsDetailsSection.css
@@ -1,3 +1,11 @@
+.container {
+  text-align: center;
+}
+@media (min-width: 920px) {
+  .container {
+    text-align: left;
+  }
+}
 .container .grid-layout {
   display: grid;
   grid-template-columns: 1fr;
@@ -8,10 +16,12 @@
     gap: 150px;
   }
 }
-.container .grid-layout .date-category-name-box {
-  margin-left: 20px;
-  display: flex;
-  gap: 30px;
+@media (min-width: 920px) {
+  .container .grid-layout .date-category-name-box {
+    margin-left: 20px;
+    display: flex;
+    gap: 30px;
+  }
 }
 .container .grid-layout .dots {
   color: #f9d783;
@@ -23,8 +33,14 @@
 .container .grid-layout img {
   margin-top: 50px;
   margin-bottom: 40px;
-  max-width: 760px;
-  max-height: 500px;
+  max-width: 100%;
+  height: auto;
+}
+@media (min-width: 920px) {
+  .container .grid-layout img {
+    max-width: 760px;
+    max-height: 500px;
+  }
 }
 .container .grid-layout h1 {
   margin-top: 140px;
@@ -38,7 +54,15 @@
   margin-top: 70px;
   margin-bottom: 60px;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+}
+@media (min-width: 920px) {
+  .container .category-buttons {
+    justify-content: space-between;
+    flex-wrap: nowrap;
+  }
 }
 .container .category-buttons a {
   text-decoration: none;
@@ -53,10 +77,12 @@
 }
 .container .right-section .search-bar {
   margin-top: 80px;
+  margin-bottom: 50px;
 }
 @media (min-width: 920px) {
   .container .right-section .search-bar {
     margin-top: 350px;
+    margin-bottom: 0px;
   }
 }
 .container .right-section .search-bar input {
@@ -70,12 +96,16 @@
   background-color: #F3F3F3;
 }
 .container .right-section .right-boxes {
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 50px;
-  padding-bottom: 40px;
-  margin-top: 40px;
   border: 1px solid #D3E6FB;
+}
+@media (min-width: 920px) {
+  .container .right-section .right-boxes {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    margin-top: 40px;
+  }
 }
 .container .right-section .right-boxes p {
   font-size: 16px;
@@ -88,17 +118,19 @@
 .container .right-section .right-boxes h3 {
   margin-bottom: 30px;
 }
-.container .right-section .right-boxes .underlined-text {
-  position: relative;
-}
-.container .right-section .right-boxes .underlined-text::before {
-  content: "";
-  display: block;
-  border-bottom: 2px solid #000;
-  width: 55px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+@media (min-width: 920px) {
+  .container .right-section .right-boxes .underlined-text {
+    position: relative;
+  }
+  .container .right-section .right-boxes .underlined-text::before {
+    content: "";
+    display: block;
+    border-bottom: 2px solid #000;
+    width: 55px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
 }
 .container .right-section .right-boxes .underlines p {
   border-bottom: 1px solid #D3E6FB;
