--- a/src/components/LeaveUsAMessageSection/LeaveUsAMessageSection.scss
+++ b/src/components/LeaveUsAMessageSection/LeaveUsAMessageSection.scss
@@ -19,7 +19,6 @@
             .message-title {
                 margin-bottom: 25px;
             }
-
             .message-form {
                 .btn-yellow {
                     text-align: center;
@@ -32,7 +31,7 @@
 
                 .one-row-form {
                     input {
-                        margin-bottom: 15px;
+                        margin-bottom: 25px;
                         color: #191919;
                         text-decoration: none;
                         padding: 15px 42px;
@@ -48,7 +47,6 @@
 
                         }
                     }
-
                 }
 
                 .multi-row-form {
@@ -75,7 +73,41 @@
                     }
                 }
 
+
+            }
+            .flex-class{
+                display: flex;
+                justify-content: center;
+                font-weight: 500;
+                .additional-message{
+                    margin-top: 5px;
+                }
+                &.column {
+                    flex-direction: column;
+                }
+                &.row {
+                    flex-direction: row;
+                }
+                .submit-message{
+                    padding: 15px 20px;
+                    margin-top: 20px;
+                    border: 1px solid black;
+                    border-radius: 10px;
+                    &.green{
+                        background-color: #7fe078;
+                    }
+                    &.red{
+                        background-color: rgb(238, 118, 118);
+
+                    }
+                }
+                .error-message {
+                    color: #ff0000;
+                    font-size: 16px;
+                    margin-top: 5px;
+
             }
         }
     }
+}
 }
