--- a/src/components/LeaveUsAMessageSection/LeaveUsAMessageSection.scss
+++ b/src/components/LeaveUsAMessageSection/LeaveUsAMessageSection.scss
@@ -29,9 +29,13 @@
                     }
                 }
 
+                .error-message-format{
+                    font-weight: 500;
+                    color: rgba(255, 0, 0, 1);
+                    margin: 7px 0px ;
+                }
                 .one-row-form {
                     input {
-                        margin-bottom: 25px;
                         color: #191919;
                         text-decoration: none;
                         padding: 15px 42px;
@@ -51,7 +55,6 @@
 
                 .multi-row-form {
                     textarea {
-                        margin-bottom: 15px;
                         color: #191919;
                         text-decoration: none;
                         padding: 15px 42px;
@@ -98,7 +101,11 @@
                     }
                     &.red{
                         background-color: rgb(238, 118, 118);
-
+                    }
+                    &.hidden{
+                        visibility: hidden;
+                        width: 100%;
+                        height: 100%;
                     }
                 }
                 .error-message {
