--- a/src/components/NewsDetailsSection/NewsDetailsSection.scss
+++ b/src/components/NewsDetailsSection/NewsDetailsSection.scss
@@ -93,6 +93,8 @@
 
         }
         .right-boxes{
+            margin-top: 20px;
+            padding-top: 20px;
         @media (min-width: 920px){
             padding-left: 30px;
             padding-right: 30px;
