--- a/src/components/OurNewsAndArticlesSection/OurNewsAndArticlesSection.scss
+++ b/src/components/OurNewsAndArticlesSection/OurNewsAndArticlesSection.scss
@@ -42,6 +42,7 @@
 
       .article-item {
         img{
+            max-width: 100%;
             width: 420px;
             height: 230px;
           }
